2008-04-24  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Oliver Hunt.

        * WebCore.base.exp: Remove two symbols from the export list that don't need to be exported.

2008-04-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18722
          <rdar://problem/5888360> REGRESSION (3.1 -> TOT): Webkit Nightly Build crashes when visiting i has a hotdog

        Test: fast/dynamic/float-remove-above-line.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren): Avoid adding floats that
        do not intrude into the line to its floats vector. When such floats go
        away, they do not dirty the line (because they do not intersect with it)
        and having it keep them in its floats vector is what caused the crash.

2008-04-24  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John Sullivan.
        
        It is possible, despite our safeguards, for createMarkup to iterate past the end of the Range
        that is passed to it.  Added a null check to prevent crashes in this situation (we won't crash but
        we will create too much markup), and added an ASSERT to hopefully catch the scenario in a debugger 
        and help us understand what's going on.

        * editing/markup.cpp:
        (WebCore::createMarkup):

2008-04-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        Remove code for calculating the glyph cache size.

        * WebCore.base.exp: Remove unused symbol.
        * platform/graphics/mac/FontCacheMac.mm: Remove code that is unused now that we do not compute the glyph cache size.
        * platform/mac/WebCoreSystemInterface.h: Remove unused symbol.
        * platform/mac/WebCoreSystemInterface.mm: Ditto.

2008-04-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        Add a definition of BUILDING_ON_LEOPARD to complement BUILDING_ON_TIGER.

        * WebCorePrefix.h:
