@@ -1,3 +1,14 @@
+2008-04-25  Benjamin Meyer  <bmeyer@trolltech.com>
+
+        Reviewed by Simon.
+
+        Fix crash in the networking layer.
+
+        Set the m_reply to null right after calling deleteLater().
+
+        * platform/network/qt/QNetworkReplyHandler.cpp:
+        (WebCore::QNetworkReplyHandler::finish):
+
 2008-04-24  Mark Rowe  <mrowe@apple.com>
 
         Rubber-stamped by Oliver Hunt.
